Bug 1205265 - Use proper quotes for Romanian in privacy/tips

--- a/media/css/privacy/privacy-day.less
+++ b/media/css/privacy/privacy-day.less
@@ -269,8 +269,19 @@ html[lang^='en'] #tips-nav-direct li a span:after {
         content: "« ";
         left: -1em;
     }
+    
     &:after {
         content: " »";
+    }
+}
+
+[lang="ro"] .tip aside .quote {
+    &:before{
+        content: "„";
+    }
+    
+    &:after {
+        content: "”";
     }
 }
 
