[fix bug 1196002] Improve tablet view on /firefox/tiles/.

--- a/media/css/firefox/tiles.less
+++ b/media/css/firefox/tiles.less
@@ -109,7 +109,16 @@
 }
 
 @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
-
+ 
+    #main-feature h1 {
+        .font-size(64px);
+        width: auto;
+    }
+    
+    .main-column {
+        width: auto;
+    }
+    
     .sidebar {
         margin-top: 0;
         width: 580px;
